--- a/TrackFit/TrackFit Project/Main Page.xaml
+++ b/TrackFit/TrackFit Project/Main Page.xaml
@@ -68,11 +68,77 @@
                 </Button>
                 <Grid Margin="137,50,10,10" Grid.ColumnSpan="3">
                     <Rectangle x:Name="Statistics_tab_rectangle" Fill="#FFCFC6C6" Stroke="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                    <TextBlock HorizontalAlignment="Stretch" Height="234" Margin="32,37" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Stretch" />
-                    <Button x:Name="Statistics_tab_left_button" Content="&lt;" Margin="11" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20" Height="50" FontSize="18" FontWeight="Bold"/>
+          <StackPanel HorizontalAlignment="Left"
+                      Height="315"
+                      Margin="120,26,0,0"
+                      VerticalAlignment="Top"
+                      Width="528">
+            <TextBlock TextWrapping="Wrap"
+                       Text="Statistics "
+                       FontSize="20"
+                       FontStyle="Italic"
+                       FontWeight="Bold" />
+            <!-- Grid divided into 4 separate Grids-->
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+              </Grid.ColumnDefinitions>
+
+              <!-- nested Grid on the Left.  It isn't subdivided further with a splitter-->
+              <Grid Grid.Column="0"
+                    VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                  <RowDefinition></RowDefinition>
+                  <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Button x:Name="WeightChart"
+                        Margin="3"
+                        Grid.Row="0">Weight Chart Here</Button>
+                <Button Margin="3"
+                        Grid.Row="1">Exercise Chart Here</Button>
+              </Grid>
+
+              <!-- This is the vertical splitter that sits between the two nested (left and right) grids. -->
+              <GridSplitter Grid.Column="1"
+                            Width="3"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Stretch"
+                            ShowsPreview="False"></GridSplitter>
+
+              <!--Nested Grid on the right. -->
+              <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                  <RowDefinition></RowDefinition>
+                  <RowDefinition Height="Auto"></RowDefinition>
+                  <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <Button Grid.Row="0"
+                        Margin="3">Fat % Chart Here</Button>
+                <Button x:Name="BMIChart"                        
+                        Grid.Row="2"
+                        Margin="3">BMI/BMR Chart Here</Button>
+
+                <!-- Horizontal Splitter that subdivides it into a top and bottom region-->
+                <GridSplitter Grid.Row="1"
+                              Height="3"
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Stretch"
+                              ShowsPreview="False"
+                              Margin="10,0,-0.333,25.667"
+                              Grid.RowSpan="2"></GridSplitter>
+              </Grid>
+            </Grid>
+          </StackPanel>
+          <Button x:Name="Statistics_tab_left_button" Content="&lt;" Margin="11" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20" Height="50" FontSize="18" FontWeight="Bold"/>
                     <Button x:Name="Statistics_tab_Right_button" Content="&gt;" Margin="11" VerticalAlignment="Center" HorizontalAlignment="Right" Width="20" Height="50" FontSize="18" FontWeight="Bold"/>
                 </Grid>
-                <TextBlock x:Name="Log_Out_Text_Block_Statistics" HorizontalAlignment="Left" Margin="10,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold">
+              
+              
+              
+              <TextBlock x:Name="Log_Out_Text_Block_Statistics" HorizontalAlignment="Left" Margin="10,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold">
                         <Hyperlink x:Name="Log_out_hyperlink_Statistics" Click="Log_out_hyperlink_Click">Log out</Hyperlink>
                 </TextBlock>
             </Grid>
