--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -40,25 +40,59 @@
                          FontSize="20"
                          FontStyle="Italic"
                          FontWeight="Bold" />
+              <TextBlock Height="23"
+                         TextWrapping="Wrap"
+                         Text="Update Your Exercise Plan"
+                         FontSize="12"
+                         FontStyle="Italic"
+                         FontWeight="Medium"
+                         Margin="0 25 0 2" />
+              <Label Content="Current Exercise Goal"
+                     Margin="0 10 0 2" />
+              <TextBox x:Name="ExecPlanTxtBx"
+                       HorizontalAlignment="Left"
+                       Height="23"
+                       Margin="0,2,0,0"
+                       TextWrapping="Wrap"
+                       Text="Tone"
+                       VerticalAlignment="Top"
+                       Width="94" />
+              <Label Content="Change Exercise Goal"
+                     Margin="0 10 0 5"
+                     FontWeight="Medium" />
+              <ComboBox>
+                <ComboBoxItem>Get Tone</ComboBoxItem>
+                <ComboBoxItem>Lose Weight</ComboBoxItem>
+                <ComboBoxItem>Get Strong</ComboBoxItem>
+              </ComboBox>
+
             </StackPanel>
+
           </Grid>
         </TabItem>
         <TabItem Header="Nutrition"
                  HorizontalAlignment="Left"
-                 Width="64">
+                 Width="64"
+                 Margin="-2,-2,0,0">
           <Grid Background="#FFE5E5E5">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="23*" />
+              <ColumnDefinition Width="647*" />
+            </Grid.ColumnDefinitions>
             <Button Content="Exit Profile Settings"
                     HorizontalAlignment="Left"
                     Margin="20,342,0,0"
                     VerticalAlignment="Top"
                     Width="124"
-                    Click="exitProfilePage">
+                    Click="exitProfilePage"
+                    Grid.ColumnSpan="2">
             </Button>
             <StackPanel HorizontalAlignment="Left"
                         Height="315"
-                        Margin="50,26,0,0"
+                        Margin="27.272,26,0,0"
                         VerticalAlignment="Top"
-                        Width="528">
+                        Width="528"
+                        Grid.Column="1">
               <TextBlock TextWrapping="Wrap"
                          Text="Nutrition "
                          FontSize="20"
@@ -70,14 +104,11 @@
                          Margin="0 25 0 2" />
               <ComboBox Padding="2"
                         Margin="0,0,283,0">
-                <ComboBoxItem>Fish</ComboBoxItem>
-                <ComboBoxItem>Chicken</ComboBoxItem>
-                <ComboBoxItem>Steak</ComboBoxItem>
-                <ComboBoxItem>Lamb Chops</ComboBoxItem>
-                <ComboBoxItem>Mixed Vegetables</ComboBoxItem>
-                <ComboBoxItem>Potatoes</ComboBoxItem>
-                <ComboBoxItem>Corn</ComboBoxItem>
-                <ComboBoxItem>Salad</ComboBoxItem>               
+                <ComboBoxItem>Week 1 Meals</ComboBoxItem>
+                <ComboBoxItem>Week 2 Meals</ComboBoxItem>
+                <ComboBoxItem>Week 3 Meals</ComboBoxItem>
+                <ComboBoxItem>Week 4 Meals</ComboBoxItem>
+                <ComboBoxItem>User Input</ComboBoxItem>
               </ComboBox>
 
               <!-- Meal Plan Info -->
@@ -180,7 +211,7 @@
                          FontSize="20"
                          FontStyle="Italic"
                          FontWeight="Bold" />
-                           
+
             </StackPanel>
             <Image x:Name="imageChart"
                    HorizontalAlignment="Left"
